[package]
name = "osrs"
version = "0.1.0"
authors = ["Sumit Jamgade <sjamgade@suse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.10"
rlibc = "1.0.0"
volatile = "0.2.6"
spin = "0.5.0"
uart_16550 = "0.2.8"
x86_64 = "0.12.2"

# [dependencies.x86_64]
# version = "=0.12.1"

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]


[profile.dev]
#panic = "abort"

[profile.release]
#panic = "abort"


[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300
